.airflow/logs/dag_id=data_extraction_to_snowflake/run_id=manual__2025-07-14T23:02:28.731704+00:00/task_id=processing_tables/map_index=0/attempt=1.log
[2025-07-14T23:02:30.819+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T23:02:28.731704+00:00 map_index=0 [queued]>
[2025-07-14T23:02:30.824+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T23:02:28.731704+00:00 map_index=0 [queued]>
[2025-07-14T23:02:30.824+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-07-14T23:02:30.833+0000] {taskinstance.py:2191} INFO - Executing <Mapped(_PythonDecoratedOperator): processing_tables> on 2025-07-14 23:02:28.731704+00:00
[2025-07-14T23:02:30.837+0000] {standard_task_runner.py:60} INFO - Started process 204 to run task
[2025-07-14T23:02:30.840+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'data_extraction_to_snowflake', 'processing_tables', 'manual__2025-07-14T23:02:28.731704+00:00', '--job-id', '92', '--raw', '--subdir', 'DAGS_FOLDER/etl_transfer_to_stage.py', '--cfg-path', '/tmp/tmp_29zp8y_', '--map-index', '0']
[2025-07-14T23:02:30.842+0000] {standard_task_runner.py:88} INFO - Job 92: Subtask processing_tables
[2025-07-14T23:02:30.885+0000] {task_command.py:423} INFO - Running <TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T23:02:28.731704+00:00 map_index=0 [running]> on host ba480c39b9ec
[2025-07-14T23:02:30.946+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data_extraction_to_snowflake' AIRFLOW_CTX_TASK_ID='processing_tables' AIRFLOW_CTX_EXECUTION_DATE='2025-07-14T23:02:28.731704+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-07-14T23:02:28.731704+00:00'
[2025-07-14T23:02:30.952+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T23:02:30.967+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T23:02:30.995+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T23:02:31.005+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 241, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_transfer_to_stage.py", line 103, in processing_each_table
    cursor.execute(insert_query,row)
psycopg2.errors.SyntaxError: syntax error at or near "1"
LINE 1: ...ES".job_info (id, job_title_id, job_title) VALUES 1, 1135, '...
                                                             ^

[2025-07-14T23:02:31.010+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=data_extraction_to_snowflake, task_id=processing_tables, map_index=0, execution_date=20250714T230228, start_date=20250714T230230, end_date=20250714T230231
[2025-07-14T23:02:31.019+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 92 for task processing_tables (syntax error at or near "1"
LINE 1: ...ES".job_info (id, job_title_id, job_title) VALUES 1, 1135, '...
                                                             ^
; 204)
[2025-07-14T23:02:31.060+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-14T23:02:31.073+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
